# devops-hands-on-project-hivebox

./: .gitignore  README.md  dockerfile  pyproject.toml
.github/workflows/: cd.yaml  ci.yml
scripts/k8s/: deployment.yaml  ingress.yaml  service.yaml
src/: main.py
tests/: conftest.py  test_main.py  test_openapi.py
