[project]
name = "hivebox"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ix-bahy", email = "m.elbahy@buguard.io" }
]
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hivebox"]
