[project]
name = "hivebox"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ix-bahy", email = "m.elbahy@buguard.io" }
]
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "httpx>=0.28.1",
    "prometheus-client>=0.20.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "httpx>=0.28.1",
    "pytest-mock>=3.14.0",
    "fastapi>=0.115.12",
    "pytest-cov>=6.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hivebox"]
